fixed overflow-x bug in mobile screen

--- a/style.css
+++ b/style.css
@@ -827,6 +827,10 @@ span {
         overflow-x: hidden;
     }
 
+    body {
+        overflow-x: hidden;
+    }
+
     header {
         background-color: var(--second-bg-color);
     }
